[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=4]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=5]
[ext_resource path="res://art/playerGrey_down1.png" type="Texture" id=6]
[ext_resource path="res://art/playerGrey_down2.png" type="Texture" id=7]
[ext_resource path="res://sound/walk.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "down",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 28.0047
height = 12.9884

[node name="Player" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}
SPEED = 400
IDLE_ANIMATION_SPEED = 3.0
WALK_ANIMATION_SPEED = 10.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "right"
frame = 1
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="WalkSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 8 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Timer" type="Timer" parent="WalkSound" index="0"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[connection signal="timeout" from="WalkSound/Timer" to="." method="_on_WalkSound_Timer_timeout"]


